[package]
name = "speed-gaming"
version = "0.1.0"
authors = ["Michael Hagarty <michaelhagarty@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default_features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread", "time"]}
